--- a/V2/index.html
+++ b/V2/index.html
@@ -9,6 +9,17 @@
     <meta name="author" content="Your Name">
     <title>Spider Solitaire - Play Free Online</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
+    <script src="javascripts/scale.fix.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js" integrity="sha256-eGE6blurk5sHj+rmkfsGYeKyZx3M4bG+ZlFyA7Kns7E=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.0/themes/base/jquery-ui.css">
+    
+	<script type="text/javascript" src="ssjs/spider-solitaire.js"></script>
+	<link rel="stylesheet" href="sscss/spider-solitaire.css" type="text/css">
+
+    
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <style>
         body {
