--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Play Spider Solitaire online for free. Challenge yourself with this classic card game featuring stunning visuals and smooth gameplay. Enjoy hours of fun and strategy!">
     <meta name="keywords" content="Spider Solitaire, online card games, free solitaire games, classic card games, play Spider Solitaire">
     <meta name="author" content="Your Name">
-    <title>Spider Solitaire - Play Free Online</title>
+    <title>Spider Solitaire - Play Free Spider Solitaire Online</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <style>
