--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <h1>Spider Solitaire</h1>
             <nav>
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="/">Home</a></li>
                     <li><a href="#how-to-play">How to Play</a></li>
                     <li><a href="#features">Features</a></li>
                     <li><a href="#about">About</a></li>
