--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Spider Solitaire, online card games, free solitaire games, classic card games, play Spider Solitaire">
     <meta name="author" content="Your Name">
     <title>Spider Solitaire - Play Free Spider Solitaire Online</title>
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/V2/favicon.ico" type="image/x-icon">
     <style>
         body {
             font-family: Arial, sans-serif;
