--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
             <nav>
                 <ul>
                     <li><a href="/">Home</a></li>
+                    <li><a href="https://www.spidersolitaire.xyz/V2/">V 2.0</a></li>
                     <li><a href="#how-to-play">How to Play</a></li>
                     <li><a href="#features">Features</a></li>
                     <li><a href="#about">About</a></li>
