--- a/V2/index.html
+++ b/V2/index.html
@@ -142,7 +142,8 @@
             <h1>Spider Solitaire</h1>
             <nav>
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/"> V1.0 </a></li>
                     <li><a href="#how-to-play">How to Play</a></li>
                     <li><a href="#features">Features</a></li>
                     <li><a href="#about">About</a></li>
