--- a/index.html
+++ b/index.html
@@ -204,6 +204,16 @@
         </section>
     </main>
 
+
+    
+<!-- BEGIN: Powered by Supercounters.com -->
+<center><script type="text/javascript" src="//widget.supercounters.com/ssl/online_i.js"></script>
+<script type="text/javascript">sc_online_i(1704991,"ffffff","e61c1c");</script><br><noscript>
+<a href="https://www.supercounters.com/">free online counter</a></noscript>
+</center>
+<!-- END: Powered by Supercounters.com -->
+
+
     <footer>
         <div class="container">
             <p>&copy; 2024 Spider Solitaire. All rights reserved.</p>
