--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <nav>
                 <ul>
                     <li><a href="/">Home</a></li>
-                    <li><a href="https://www.spidersolitaire.xyz/V2/">V2.0</a></li>
+                    <li><a href="/V2/">V2.0</a></li>
                     <li><a href="#how-to-play">How to Play</a></li>
                     <li><a href="#features">Features</a></li>
                     <li><a href="#about">About</a></li>
